--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/fragment_news_item.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/fragment_news_item.xml
@@ -13,10 +13,20 @@
         android:background="@drawable/share_to_wall"
         android:visibility="gone" />
 
-    <ScrollView
+    <com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout
+        android:id="@+id/rumours_swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/post_container">
+        android:layout_alignParentEnd="true"
+        app:srl_direction="bottom"
+        android:layout_above="@+id/post_container"
+        android:layout_below="@+id/top_buttons_container">
+
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/newsItemScrollView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -359,8 +369,8 @@
             </RelativeLayout>
 
         </RelativeLayout>
-    </ScrollView>
-
+    </android.support.v4.widget.NestedScrollView>
+    </com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout>
     <RelativeLayout
         android:id="@+id/post_container"
         android:layout_width="match_parent"
