--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_signup.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_signup.xml
@@ -4,194 +4,204 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?green_dark_1"
-    android:fitsSystemWindows="false"
     android:clickable="true"
+    android:fitsSystemWindows="false"
     android:isScrollContainer="false">
 
     <RelativeLayout
-        android:isScrollContainer="false"
-        android:fitsSystemWindows="false"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:fitsSystemWindows="false"
+        android:isScrollContainer="false">
 
         <ImageView
-            android:fitsSystemWindows="false"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/phone_background" />
+            android:background="@drawable/phone_background"
+            android:fitsSystemWindows="false" />
 
 
         <ImageView
-            android:fitsSystemWindows="false"
             android:id="@+id/image_player"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:alpha="0.4"
+            android:fitsSystemWindows="false"
             android:scaleType="centerCrop"
             android:src="@drawable/video_chat_background" />
 
 
     </RelativeLayout>
 
-
-
     <RelativeLayout
-        android:isScrollContainer="true"
-        android:id="@+id/content_container"
         android:layout_width="match_parent"
-
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        android:clickable="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:gravity="center">
+        android:layout_below="@+id/top_split_line"
+        android:layout_centerInParent="true">
 
-
-        <RelativeLayout
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:orientation="vertical"
-            android:gravity="center">
-                <Button
-                    android:id="@+id/facebook_button"
-                    style="@style/facebook_login_button_phone"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/join_with_facebook"
-                    android:textAllCaps="false"
-                    android:textColor="?white"
-                    android:textSize="@dimen/font_size_16"
-                    android:paddingTop="@dimen/padding_8"
-                    android:paddingBottom="@dimen/padding_8"
-                    android:layout_centerHorizontal="true"/>
-
-            <com.facebook.login.widget.LoginButton
-                android:id="@+id/sign_up_facebook"
-                style="@style/facebook_login_button_phone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/join_with_facebook"
-                android:visibility="gone" />
+            android:layout_centerInParent="true">
 
             <RelativeLayout
-                android:id="@+id/popupSignupContainer"
+                android:id="@+id/content_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/facebook_button"
-                android:gravity="center"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="@dimen/margin_15">
+                >
 
-                <View
-                    android:id="@+id/horizontal_divider"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_centerHorizontal="true"
-                    android:padding="@dimen/padding_8"/>
-
-                    <EditText
-                        android:id="@+id/sign_up_firstname"
-                        style="@style/edit_text_login_phone"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/sign_up_firstname"
-                        android:inputType="text"
-                        android:textSize="@dimen/font_size_15"
-                        android:layout_toStartOf="@+id/horizontal_divider"/>
-
-                    <EditText
-                        android:id="@+id/sign_up_lastname"
-                        style="@style/edit_text_login_phone"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/sign_up_lastname"
-                        android:inputType="text"
-                        android:textSize="@dimen/font_size_15"
-                        android:layout_toEndOf="@+id/horizontal_divider"/>
-
-
-                <EditText
-                    android:id="@+id/sign_up_email"
-                    style="@style/edit_text_login_phone"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/sign_up_email"
-                    android:inputType="text"
-                    android:textSize="@dimen/font_size_15"
-                    android:layout_toStartOf="@+id/horizontal_divider"
-                    android:layout_below="@+id/sign_up_firstname"/>
-
-
-                <EditText
-                    android:id="@+id/sign_up_password"
-                    style="@style/edit_text_login_phone"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/login_login_password"
-                    android:inputType="textPassword"
-                    android:textSize="@dimen/font_size_15"
-                    android:layout_toEndOf="@+id/horizontal_divider"
-                    android:layout_below="@+id/sign_up_lastname"/>
-
-                </RelativeLayout>
 
                 <RelativeLayout
-                    android:id="@+id/popupSignupJoinNowButton"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_15"
-                    android:orientation="horizontal"
-                    android:layout_below="@+id/popupSignupContainer"
-                    android:layout_centerHorizontal="true">
+                    android:layout_height="match_parent"
+                    android:layout_centerInParent="true"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:paddingBottom="@dimen/margin_20"
+                    android:paddingTop="@dimen/margin_20">
+
+                    <Button
+                        android:id="@+id/facebook_button"
+                        style="@style/facebook_login_button_phone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:paddingBottom="@dimen/padding_8"
+                        android:paddingTop="@dimen/padding_8"
+                        android:text="@string/join_with_facebook"
+                        android:textAllCaps="false"
+                        android:textColor="?white"
+                        android:textSize="@dimen/font_size_16" />
+
+                    <com.facebook.login.widget.LoginButton
+                        android:id="@+id/sign_up_facebook"
+                        style="@style/facebook_login_button_phone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/join_with_facebook"
+                        android:visibility="gone" />
 
                     <RelativeLayout
-                        android:id="@+id/bottom_buttons_container_sign_up"
+                        android:id="@+id/popupSignupContainer"
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/standard_button_height"
-                        android:background="@drawable/button_login_login"
-                        android:layout_centerHorizontal="true">
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/facebook_button"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="@dimen/margin_15"
+                        android:gravity="center">
 
-                        <TextView
-                            android:id="@+id/sign_up_text"
-                            android:layout_width="wrap_content"
+                        <View
+                            android:id="@+id/horizontal_divider"
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_centerHorizontal="true"
+                            android:padding="@dimen/padding_8" />
+
+                        <EditText
+                            android:id="@+id/sign_up_firstname"
+                            style="@style/edit_text_login_phone"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:text="@string/join_now"
-                            android:textColor="@android:color/black"
-                            android:textSize="@dimen/font_size_18" />
+                            android:layout_toStartOf="@+id/horizontal_divider"
+                            android:hint="@string/sign_up_firstname"
+                            android:inputType="text"
+                            android:textSize="@dimen/font_size_15" />
 
-                        <com.wang.avi.AVLoadingIndicatorView
-                            android:id="@+id/sign_up_progress_bar"
-                            android:layout_width="@dimen/prodgres_bar"
-                            android:layout_height="@dimen/prodgres_bar"
-                            android:layout_centerInParent="true"
-                            android:elevation="@dimen/elevation_2"
-                            android:visibility="gone"
-                            app:indicatorName="LineSpinFadeLoaderIndicator" />
+                        <EditText
+                            android:id="@+id/sign_up_lastname"
+                            style="@style/edit_text_login_phone"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_toEndOf="@+id/horizontal_divider"
+                            android:hint="@string/sign_up_lastname"
+                            android:inputType="text"
+                            android:textSize="@dimen/font_size_15" />
+
+
+                        <EditText
+                            android:id="@+id/sign_up_email"
+                            style="@style/edit_text_login_phone"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/sign_up_firstname"
+                            android:layout_toStartOf="@+id/horizontal_divider"
+                            android:hint="@string/sign_up_email"
+                            android:inputType="text"
+                            android:textSize="@dimen/font_size_15" />
+
+
+                        <EditText
+                            android:id="@+id/sign_up_password"
+                            style="@style/edit_text_login_phone"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/sign_up_lastname"
+                            android:layout_toEndOf="@+id/horizontal_divider"
+                            android:hint="@string/login_login_password"
+                            android:inputType="textPassword"
+                            android:textSize="@dimen/font_size_15" />
 
                     </RelativeLayout>
 
+                    <RelativeLayout
+                        android:id="@+id/popupSignupJoinNowButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/popupSignupContainer"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="@dimen/margin_15"
+                        android:orientation="horizontal">
+
+                        <RelativeLayout
+                            android:id="@+id/bottom_buttons_container_sign_up"
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/standard_button_height"
+                            android:layout_centerHorizontal="true"
+                            android:background="@drawable/button_login_login">
+
+                            <TextView
+                                android:id="@+id/sign_up_text"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerInParent="true"
+                                android:text="@string/join_now"
+                                android:textColor="@android:color/black"
+                                android:textSize="@dimen/font_size_18" />
+
+                            <com.wang.avi.AVLoadingIndicatorView
+                                android:id="@+id/sign_up_progress_bar"
+                                android:layout_width="@dimen/prodgres_bar"
+                                android:layout_height="@dimen/prodgres_bar"
+                                android:layout_centerInParent="true"
+                                android:elevation="@dimen/elevation_2"
+                                android:visibility="gone"
+                                app:indicatorName="LineSpinFadeLoaderIndicator" />
+
+                        </RelativeLayout>
+
+                    </RelativeLayout>
+
+
+                    <TextView
+                        android:id="@+id/politic_and_privacy_android"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/popupSignupJoinNowButton"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/margin_10"
+                        android:text="@string/sign_up_text"
+                        android:textAlignment="center"
+                        android:textColor="?white_semitransparent"
+                        android:textSize="@dimen/font_size_10" />
                 </RelativeLayout>
 
-
-                <TextView
-                    android:id="@+id/politic_and_privacy_android"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/margin_10"
-                    android:text="@string/sign_up_text"
-                    android:textAlignment="center"
-                    android:textColor="?white_semitransparent"
-                    android:textSize="@dimen/font_size_10"
-                    android:layout_below="@+id/popupSignupJoinNowButton"/>
             </RelativeLayout>
-
+        </ScrollView>
     </RelativeLayout>
+
     <View
         android:id="@+id/top_split_line"
         android:layout_width="match_parent"
