--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_right_login_sing_up.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_right_login_sing_up.xml
@@ -2,8 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_margin="@dimen/margin_8"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_margin="@dimen/margin_8">
 
 
     <ImageView
@@ -20,109 +20,119 @@
         android:scaleType="centerCrop"
         android:src="@drawable/video_chat_background" />
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
 
-
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="@dimen/height_70"
-                android:layout_height="@dimen/height_70"
-                android:layout_gravity="center"
-                android:src="@drawable/scp_white_logo" />
-
-
-            <TextView
-                android:id="@+id/textView"
-                style="@style/shadow_text_login"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/margin_15"
-                android:text="@string/login_slider_text_1_phone"
-                android:textAlignment="center"
-                android:textColor="?white"
-                android:textSize="@dimen/font_size_22" />
-
-            <TextView
-                android:id="@+id/description"
-                style="@style/shadow_text_login"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="@dimen/margin_15"
-                android:layout_marginTop="@dimen/margin_15"
-                android:text="@string/login_slider_chat"
-                android:textAlignment="center"
-                android:textColor="?white"
-                android:textSize="@dimen/font_size_18" />
+            android:layout_height="match_parent"
+            android:paddingBottom="@dimen/margin_8"
+            android:paddingTop="@dimen/margin_8">
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/margin_16"
-                android:orientation="horizontal"
-                android:weightSum="1">
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:orientation="vertical">
 
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.095" />
-
-                <Button
-                    android:id="@+id/join_now_button"
-                    android:layout_width="0dp"
-                    android:layout_height="@dimen/standard_button_height"
-                    android:layout_weight="0.397"
-                    android:background="@drawable/gym_bag_button_background"
-                    android:text="@string/join_now"
-                    android:textAlignment="center"
-                    android:textAllCaps="false"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/font_size_19" />
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.023"  />
-                <Button
-                    android:id="@+id/login_button"
-                    android:layout_width="0dp"
-
-                    android:layout_height="@dimen/standard_button_height"
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="@dimen/height_70"
+                    android:layout_height="@dimen/height_70"
                     android:layout_gravity="center"
-                    android:layout_weight="0.397"
-                    android:background="@drawable/gym_bag_button_background"
-                    android:gravity="center"
-                    android:text="@string/sign_in"
+                    android:src="@drawable/scp_white_logo" />
+
+
+                <TextView
+                    android:id="@+id/textView"
+                    style="@style/shadow_text_login"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/margin_15"
+                    android:text="@string/login_slider_text_1_phone"
                     android:textAlignment="center"
-                    android:textAllCaps="false"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/font_size_19" />
+                    android:textColor="?white"
+                    android:textSize="@dimen/font_size_22" />
 
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.095"  />
+                <TextView
+                    android:id="@+id/description"
+                    style="@style/shadow_text_login"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="@dimen/margin_15"
+                    android:layout_marginTop="@dimen/margin_15"
+                    android:text="@string/login_slider_chat"
+                    android:textAlignment="center"
+                    android:textColor="?white"
+                    android:textSize="@dimen/font_size_18" />
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/margin_16"
+                    android:orientation="horizontal"
+                    android:weightSum="1">
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.095" />
+
+                    <Button
+                        android:id="@+id/join_now_button"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/standard_button_height"
+                        android:layout_weight="0.397"
+                        android:background="@drawable/gym_bag_button_background"
+                        android:text="@string/join_now"
+                        android:textAlignment="center"
+                        android:textAllCaps="false"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/font_size_19" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.023" />
+
+                    <Button
+                        android:id="@+id/login_button"
+                        android:layout_width="0dp"
+
+                        android:layout_height="@dimen/standard_button_height"
+                        android:layout_gravity="center"
+                        android:layout_weight="0.397"
+                        android:background="@drawable/gym_bag_button_background"
+                        android:gravity="center"
+                        android:text="@string/sign_in"
+                        android:textAlignment="center"
+                        android:textAllCaps="false"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/font_size_19" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.095" />
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/height_40"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/margin_15"
+                    android:src="@drawable/logo_fq" />
             </LinearLayout>
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/height_40"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/margin_15"
-                android:src="@drawable/logo_fq" />
-        </LinearLayout>
-    </RelativeLayout>
+        </RelativeLayout>
+    </ScrollView>
 
     <ImageButton
         android:id="@+id/close_Button"
