--- a/SportsSideKick/app/src/sportsidekick/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/fragment_chat.xml
@@ -1,9 +1,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/chat_root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?white_semitransparent"
+    android:windowSoftInputMode="adjustResize"
     tools:context="base.app.fragment.instance.ChatFragment">
 
     <!-- Background image -->
@@ -44,15 +46,15 @@
 
         <TextView
             android:id="@+id/chat_info_line_text"
-            android:layout_below="@+id/chat_heads_view"
             android:layout_width="match_parent"
             android:layout_height="@dimen/margin_20"
-            android:paddingStart="@dimen/margin_60"
-            android:paddingEnd="@dimen/margin_60"
+            android:layout_below="@+id/chat_heads_view"
+            android:background="?chatInfoBackgroundColor"
             android:ellipsize="marquee"
             android:gravity="center"
             android:lines="1"
-            android:background="?chatInfoBackgroundColor"
+            android:paddingEnd="@dimen/margin_60"
+            android:paddingStart="@dimen/margin_60"
             android:textColor="?white_semitransparent"
             android:textSize="@dimen/font_size_10" />
     </RelativeLayout>
@@ -149,9 +151,9 @@
         <ImageButton
             android:id="@+id/menu_button"
             android:layout_width="@dimen/standard_button_height"
-            android:layout_marginEnd="@dimen/height_1"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_marginEnd="@dimen/height_1"
             android:layout_toEndOf="@+id/chat_buttons_container"
             android:background="@null"
             android:src="?chatAddButtonIcon" />
@@ -167,6 +169,8 @@
                 android:id="@+id/input_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
                 android:animateLayoutChanges="true"
                 android:background="?chat_input_edit_text_background"
                 android:gravity="start|center_vertical"
@@ -174,14 +178,16 @@
                 android:imeActionId="@+id/action_send_message_id"
                 android:imeActionLabel="Send"
                 android:imeOptions="actionSend"
-                android:inputType="text"
+                android:inputType="textPersonName"
                 android:maxLines="1"
+                android:paddingBottom="@dimen/padding_13"
+                android:paddingEnd="@dimen/padding_8"
                 android:paddingStart="@dimen/padding_16"
-                android:padding="@dimen/padding_8"
+                android:paddingTop="@dimen/padding_13"
                 android:privateImeOptions=""
                 android:textColor="@color/colorPrimary"
                 android:textColorHint="?colorPrimarySemiLight"
-                android:textSize="@dimen/font_size_10" />
+                android:textSize="@dimen/font_size_16" />
 
         </RelativeLayout>
 
@@ -189,9 +195,9 @@
             android:id="@+id/chat_menu_dots"
             android:layout_width="@dimen/standard_button_height"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/height_1"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/height_1"
             android:background="@null"
             android:src="?chatMenuButtonIcon" />
 
@@ -214,12 +220,12 @@
                 android:layout_marginEnd="@dimen/margin_5"
                 android:layout_marginStart="@dimen/margin_5"
                 android:layout_weight="0.25"
-                android:textSize="@dimen/font_size_10"
                 android:background="?textViewRoundBorderShape"
                 android:gravity="center"
                 android:padding="@dimen/half_margin"
                 android:text="@string/create"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textSize="@dimen/font_size_10" />
 
             <TextView
                 android:id="@+id/chat_menu_edit"
@@ -229,12 +235,12 @@
                 android:layout_marginEnd="@dimen/margin_5"
                 android:layout_marginStart="@dimen/margin_5"
                 android:layout_weight="0.25"
-                android:textSize="@dimen/font_size_10"
                 android:background="?textViewRoundBorderShape"
                 android:gravity="center"
                 android:padding="@dimen/half_margin"
                 android:text="Edit"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textSize="@dimen/font_size_10" />
 
             <TextView
                 android:id="@+id/chat_menu_delete"
@@ -244,12 +250,12 @@
                 android:layout_marginEnd="@dimen/margin_5"
                 android:layout_marginStart="@dimen/margin_5"
                 android:layout_weight="0.25"
-                android:textSize="@dimen/font_size_10"
                 android:background="?textViewRoundBorderShape"
                 android:gravity="center"
                 android:padding="@dimen/half_margin"
                 android:text="Delete"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textSize="@dimen/font_size_10" />
 
 
             <TextView
@@ -258,14 +264,14 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginEnd="@dimen/margin_5"
-                android:textSize="@dimen/font_size_10"
                 android:layout_marginStart="@dimen/margin_5"
                 android:layout_weight="0.25"
                 android:background="?textViewRoundBorderShape"
                 android:gravity="center"
                 android:padding="@dimen/half_margin"
                 android:text="Search"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textSize="@dimen/font_size_10" />
 
         </LinearLayout>
 
@@ -299,8 +305,7 @@
                 android:id="@+id/mediaController"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                app:uvv_scalable="false"
-                />
+                app:uvv_scalable="false" />
 
         </FrameLayout>
 
@@ -338,7 +343,8 @@
     <RelativeLayout
         android:id="@+id/inactive_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+      android:visibility="gone">
 
         <ImageView
             android:layout_width="match_parent"
