--- a/SportsSideKick/app/src/sportsidekick/res/values/dimens.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/dimens.xml
@@ -197,6 +197,7 @@
     <dimen name="height_55">55dp</dimen>
     <dimen name="width_5">5dp</dimen>
     <dimen name="padding_12">12dp</dimen>
+    <dimen name="padding_13">13dp</dimen>
     <dimen name="height_70">70dp</dimen>
     <dimen name="width_70">70dp</dimen>
     <dimen name="width_4">4dp</dimen>
