--- a/SportsSideKick/app/src/sportsidekick/res/drawable/button_edit_profile_image.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/drawable/button_edit_profile_image.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="?attr/light_green_2" />
+    <solid android:color="@color/colorPrimaryLight" />
     <corners
         android:bottomRightRadius="@dimen/width_80"
         android:topRightRadius="@dimen/width_80" />
