--- a/SportsSideKick/app/src/sportsidekick/res/values/club.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/club.xml
@@ -2,6 +2,8 @@
 <resources>
     <string name="stats_url">http://hosted.stats.com/matchcast/football/clients/stats/index-new.html?lang=en&amp;league=liga</string>
     <string name="store_url">https://lojaverde.sporting.pt/en</string>
+
+    <string name="terms_i_privacy">http://sportssidekick.tv/terms?lang=</string>
     <string name="store_url_item">https://lojaverde.sporting.pt/en/equipments</string>
     <string name="store_url_item2">https://lojaverde.sporting.pt/en/lifestyle</string>
     <string name="store_url_item3">https://lojaverde.sporting.pt/en/children-baby</string>
