--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_your_wallet.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_your_wallet.xml
@@ -168,10 +168,10 @@
                         android:textSize="@dimen/font_size_10" />
 
                     <TextView
+                        android:id="@+id/wallet_amount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/you_have_caption"
-                        android:text="2,539 $$K"
                         android:textColor="?colorAccent"
                         android:textSize="@dimen/font_size_16" />
                 </RelativeLayout>
@@ -300,7 +300,7 @@
                     android:layout_marginBottom="@dimen/margin_5"
                     android:layout_marginEnd="@dimen/margin_5"
                     android:layout_marginStart="@dimen/margin_15"
-                    android:text="10 $$K"
+                    android:text="10"
                     android:textColor="@color/white"
                     android:textSize="@dimen/font_size_11" />
 
@@ -328,7 +328,7 @@
                     android:layout_alignStart="@+id/bundle_2"
                     android:layout_marginBottom="@dimen/margin_5"
                     android:layout_marginStart="@dimen/margin_15"
-                    android:text="100 $$K"
+                    android:text="100"
                     android:textColor="@color/white"
                     android:textSize="@dimen/font_size_11" />
 
@@ -352,7 +352,7 @@
                     android:layout_alignStart="@+id/bundle_3"
                     android:layout_marginBottom="@dimen/margin_5"
                     android:layout_marginStart="@dimen/margin_15"
-                    android:text="500 $$K"
+                    android:text="500"
                     android:textColor="@color/white"
                     android:textSize="@dimen/font_size_11" />
 
@@ -376,7 +376,7 @@
                     android:layout_alignStart="@+id/bundle_4"
                     android:layout_marginBottom="@dimen/margin_5"
                     android:layout_marginStart="@dimen/margin_15"
-                    android:text="1000 $$K"
+                    android:text="1000"
                     android:textColor="@color/black"
                     android:textSize="@dimen/font_size_11" />
 
@@ -400,7 +400,7 @@
                     android:layout_alignStart="@+id/bundle_5"
                     android:layout_marginBottom="@dimen/margin_5"
                     android:layout_marginStart="@dimen/margin_15"
-                    android:text="1500 $$K"
+                    android:text="1500"
                     android:textColor="@color/black"
                     android:textSize="@dimen/font_size_11" />
 
